Tested against CF2.0
